updated Moveset link PokemonCard.js+css

--- a/src/Components/SpecificPokemon/PokemonCard/pokemonCard.css
+++ b/src/Components/SpecificPokemon/PokemonCard/pokemonCard.css
@@ -75,6 +75,9 @@
   padding: 10px;
   border-radius: 10px;
 }
+.pokemon-moveset--link h2 {
+  color: #fff;
+}
 .pokemon-main-div .grass {
   background: #5fbd58;
 }
