--- a/src/Components/SpecificPokemon/PokemonCard/pokemonCard.css
+++ b/src/Components/SpecificPokemon/PokemonCard/pokemonCard.css
@@ -141,43 +141,32 @@
 .pokemon-card-evolution h4 {
   text-align: center;
 }
-@media (max-width: 520px) {
-  .pokemon-card-evolution {
-    width: 42%;
-  }
-  .pokemon-moveset {
-    width: 100%;
-  }
-}
-@media (min-width: 520px) {
-  .container {
-    max-width: 500px;
-  }
-  .pokemon-card-evolution {
-    width: 30%;
-  }
-}
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1140px;
-  }
-  .pokemon-card-evolution {
-    width: 20%;
-  }
-}
-@media (min-width: 992px) {
-  .container {
-    max-width: 960px;
-  }
-  .pokemon-card-evolution {
-    width: 20%;
-  }
-}
-@media (min-width: 768px) {
+
+@media screen and (min-width: 1024px) {
   .container {
     max-width: 720px;
   }
   .pokemon-card-evolution {
-    width: 20%;
+    width: 19%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .container {
+    max-width: 720px;
+  }
+  .pokemon-card-evolution {
+    width: 19%;
+  }
+}
+@media screen and (max-width: 767px) {
+  .container {
+    max-width: 400px;
+  }
+
+  .pokemon-card-evolution {
+    width: 38%;
+  }
+  .pokemon-moveset {
+    width: 100%;
   }
 }
