--- a/src/Components/SpecificPokemon/PokemonCard/pokemonCard.css
+++ b/src/Components/SpecificPokemon/PokemonCard/pokemonCard.css
@@ -16,9 +16,8 @@
 }
 
 .jumbotron {
-  padding: 10px;
   margin-bottom: 0;
-  padding: 4rem 2rem;
+  padding: 2rem 2rem;
 }
 .container {
   width: 100%;
@@ -72,11 +71,12 @@
   width: 50%;
 }
 .pokemon-moveset--link {
-  padding: 10px;
+  padding: 15px;
   border-radius: 10px;
 }
 .pokemon-moveset--link:hover {
   cursor: pointer;
+  box-shadow: 1px 3px 5px 2px rgba(0, 0, 0, 0.5);
 }
 .pokemon-moveset--link h2 {
   color: #fff;
